src/main/vbs/g4/IDL_GrammarParser.js
// Generated from IDL_Grammar.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import IDL_GrammarListener from './IDL_GrammarListener.js';
import IDL_GrammarVisitor from './IDL_GrammarVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class IDL_GrammarParser extends antlr4.Parser {

    static grammarFileName = "IDL_Grammar.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            "';'", "':'", "','", "'{'", "'}'", "'('", "')'", 
                            "'['", "']'", "'<'", "'>'", "'='", "'+'", "'-'", 
                            "'*'", "'/'", "'%'", "'|'", "'^'", "'&'", "'<<'", 
                            "'>>'", "'~'", "'::'", "'@'", "'in'", "'out'", 
                            "'inout'", "'interface'", "'typedef'", "'void'", 
                            "'default'", "'module'", "'@annotation'", "'ifndef'", 
                            "'switch'", "'case'", "'sequence'", "'struct'", 
                            "'enum'", "'const'", "'string'", "'union'", 
                            "'char'", "'int8'", "'int16'", "'int32'", "'int64'", 
                            "'long'", "'octet'", "'short'", "'uint8'", "'uint16'", 
                            "'uint32'", "'uint64'", "'unsigned'", "'double'", 
                            "'float'", "'boolean'", "'wchar'" ];
    static symbolicNames = [ null, "INTEGER_LITERAL", "OCTAL_LITERAL", "HEX_LITERAL", 
                             "FLOATING_PT_LITERAL", "STRING_LITERAL", "CHARACTER_LITERAL", 
                             "BOOLEAN_LITERAL", "SEMICOLON", "COLON", "COMMA", 
                             "LEFT_BRACE", "RIGHT_BRACE", "LEFT_BRACKET", 
                             "RIGHT_BRACKET", "LEFT_SQUARE_BRACKET", "RIGHT_SQUARE_BRACKET", 
                             "LEFT_ANG_BRACKET", "RIGHT_ANG_BRACKET", "EQUAL", 
                             "PLUS", "MINUS", "MULT", "DIV", "MOD", "BITWISE_OR", 
                             "BITWISE_XOR", "BITWISE_AND", "SHIFT_LEFT", 
                             "SHIFT_RIGHT", "BITWISE_NOT", "DOUBLE_COLON", 
                             "AT", "KW_IN", "KW_OUT", "KW_INOUT", "KW_INTERFACE", 
                             "KW_TYPEDEF", "KW_VOID", "KW_DEFAULT", "KW_MODULE", 
                             "KW_AT_ANNOTATION", "KW_IFNDEF", "KW_SWITCH", 
                             "KW_CASE", "KW_SEQUENCE", "KW_STRUCT", "KW_ENUM", 
                             "KW_CONST", "KW_STRING", "KW_UNION", "CHAR_TYPE", 
                             "INT8_TYPE", "INT16_TYPE", "INT32_TYPE", "INT64_TYPE", 
                             "LONG_TYPE", "OCTET_TYPE", "SHORT_TYPE", "UINT8_TYPE", 
                             "UINT16_TYPE", "UINT32_TYPE", "UINT64_TYPE", 
                             "UNSIGNED_TYPE", "DOUBLE_TYPE", "FLOAT_TYPE", 
                             "KW_BOOLEAN", "WCHAR_TYPE", "ID", "LETTER", 
                             "ID_DIGIT", "WS", "PREPROC_DIRECTIVE", "COMMENT", 
                             "LINE_COMMENT" ];
    static ruleNames = [ "specification", "definition", "module_dcl", "module_contents", 
                         "module_content", "interface_dcl", "interface_forward_dcl", 
                         "interface_def", "interface_header", "interface_kind", 
                         "interface_inheritance_spec", "interface_body", 
                         "export_dcl", "interface_name", "scoped_name", 
                         "annotated_scoped_name", "initialization_parameter_declaration", 
                         "const_dcl", "const_type", "const_expr", "or_expr", 
                         "xor_expr", "and_expr", "shift_expr", "add_expr", 
                         "mult_expr", "unary_expr", "primary_expr", "unary_operator", 
                         "literal", "type_dcl", "typedef_dcl", "constr_type_dcl", 
                         "type_declarator", "type_spec", "simple_type_spec", 
                         "base_type_spec", "template_type_spec", "declarators", 
                         "declarator", "simple_declarator", "complex_declarator", 
                         "floating_pt_type", "float_type", "double_type", 
                         "long_double_type", "integer_type", "signed_int", 
                         "signed_octet_int", "signed_short_int", "signed_long_int", 
                         "signed_longlong_int", "unsigned_int", "unsigned_octet_int", 
                         "unsigned_short_int", "unsigned_long_int", "unsigned_longlong_int", 
                         "char_type", "wide_char_type", "boolean_type", 
                         "octet_type", "annotation", "annotation_appl", 
                         "annotation_appl_params", "annotation_appl_param", 
                         "struct_dcl", "struct_def", "struct_forward_dcl", 
                         "member_list", "member", "union_dcl", "union_def", 
                         "union_forward_dcl", "switch_type_spec", "switch_body", 
                         "case", "case_label", "element_spec", "enum_dcl", 
                         "enumerator_list", "enumerator", "string_type", 
                         "positive_int_const", "sequence_type", "array_declarator", 
                         "fixed_array_size", "op_dcl", "operation_type_spec", 
                         "parameter_dcls", "param_dcl", "param_attribute", 
                         "identifier" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = IDL_GrammarParser.ruleNames;
        this.literalNames = IDL_GrammarParser.literalNames;
        this.symbolicNames = IDL_GrammarParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 14:
    	    		return this.scoped_name_sempred(localctx, predIndex);
    	case 21:
    	    		return this.xor_expr_sempred(localctx, predIndex);
    	case 22:
    	    		return this.and_expr_sempred(localctx, predIndex);
    	case 23:
    	    		return this.shift_expr_sempred(localctx, predIndex);
    	case 24:
    	    		return this.add_expr_sempred(localctx, predIndex);
    	case 25:
    	    		return this.mult_expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    scoped_name_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    xor_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    and_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 2:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    shift_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 3:
    			return this.precpred(this._ctx, 2);
    		case 4:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    add_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 5:
    			return this.precpred(this._ctx, 2);
    		case 6:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    mult_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 7:
    			return this.precpred(this._ctx, 3);
    		case 8:
    			return this.precpred(this._ctx, 2);
    		case 9:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	specification() {
	    let localctx = new SpecificationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, IDL_GrammarParser.RULE_specification);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 185; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 184;
	            this.definition();
	            this.state = 187; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 9)) & ~0x1f) === 0 && ((1 << (_la - 9)) & 2558525441) !== 0) || ((((_la - 46)) & ~0x1f) === 0 && ((1 << (_la - 46)) & 4194327) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	definition() {
	    let localctx = new DefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, IDL_GrammarParser.RULE_definition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.annotation();
	        this.state = 202;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 40:
	            this.state = 190;
	            this.module_dcl();
	            this.state = 191;
	            this.match(IDL_GrammarParser.SEMICOLON);
	            break;
	        case 48:
	            this.state = 193;
	            this.const_dcl();
	            this.state = 194;
	            this.match(IDL_GrammarParser.SEMICOLON);
	            break;
	        case 32:
	        case 37:
	        case 46:
	        case 47:
	        case 50:
	        case 68:
	            this.state = 196;
	            this.type_dcl();
	            this.state = 197;
	            this.match(IDL_GrammarParser.SEMICOLON);
	            break;
	        case 9:
	        case 36:
	            this.state = 199;
	            this.interface_dcl();
	            this.state = 200;
	            this.match(IDL_GrammarParser.SEMICOLON);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	module_dcl() {
	    let localctx = new Module_dclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, IDL_GrammarParser.RULE_module_dcl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 204;
	        this.match(IDL_GrammarParser.KW_MODULE);
	        this.state = 205;
	        this.identifier();
	        this.state = 206;
	        this.match(IDL_GrammarParser.LEFT_BRACE);
	        this.state = 208; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 207;
	            this.module_contents();
	            this.state = 210; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(((((_la - 9)) & ~0x1f) === 0 && ((1 << (_la - 9)) & 2558525441) !== 0) || ((((_la - 46)) & ~0x1f) === 0 && ((1 << (_la - 46)) & 4194327) !== 0));
	        this.state = 212;
	        this.match(IDL_GrammarParser.RIGHT_BRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	module_contents() {
	    let localctx = new Module_contentsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, IDL_GrammarParser.RULE_module_contents);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 214;
	        this.module_content();
	        this.state = 215;
	        this.match(IDL_GrammarParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	module_content() {
	    let localctx = new Module_contentContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, IDL_GrammarParser.RULE_module_content);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 217;
	        this.annotation();
	        this.state = 222;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 32:
	        case 37:
	        case 46:
	        case 47:
	        case 50:
	        case 68:
	            this.state = 218;
	            this.type_dcl();
	            break;
	        case 40:
	            this.state = 219;
	            this.module_dcl();
	            break;
	        case 48:
	            this.state = 220;
	            this.const_dcl();
	            break;
	        case 9:
	        case 36:
	            this.state = 221;
	            this.interface_dcl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_dcl() {
	    let localctx = new Interface_dclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, IDL_GrammarParser.RULE_interface_dcl);
	    try {
	        this.state = 226;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 224;
	            this.interface_def();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 225;
	            this.interface_forward_dcl();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_forward_dcl() {
	    let localctx = new Interface_forward_dclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, IDL_GrammarParser.RULE_interface_forward_dcl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 228;
	        this.interface_kind();
	        this.state = 229;
	        this.identifier();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_def() {
	    let localctx = new Interface_defContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, IDL_GrammarParser.RULE_interface_def);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 231;
	        this.interface_header();
	        this.state = 232;
	        this.match(IDL_GrammarParser.LEFT_BRACE);
	        this.state = 233;
	        this.interface_body();
	        this.state = 234;
	        this.match(IDL_GrammarParser.RIGHT_BRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_header() {
	    let localctx = new Interface_headerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, IDL_GrammarParser.RULE_interface_header);
	    try {
	        this.state = 240;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 36:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 236;
	            this.interface_kind();
	            this.state = 237;
	            this.identifier();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 239;
	            this.interface_inheritance_spec();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_kind() {
	    let localctx = new Interface_kindContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, IDL_GrammarParser.RULE_interface_kind);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 242;
	        this.match(IDL_GrammarParser.KW_INTERFACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_inheritance_spec() {
	    let localctx = new Interface_inheritance_specContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, IDL_GrammarParser.RULE_interface_inheritance_spec);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 244;
	        this.match(IDL_GrammarParser.COLON);
	        this.state = 245;
	        this.interface_name();
	        this.state = 250;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===10) {
	            this.state = 246;
	            this.match(IDL_GrammarParser.COMMA);
	            this.state = 247;
	            this.interface_name();
	            this.state = 252;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_body() {
	    let localctx = new Interface_bodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, IDL_GrammarParser.RULE_interface_body);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 256;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 31)) & ~0x1f) === 0 && ((1 << (_la - 31)) & 4294951107) !== 0) || ((((_la - 63)) & ~0x1f) === 0 && ((1 << (_la - 63)) & 63) !== 0)) {
	            this.state = 253;
	            this.export_dcl();
	            this.state = 258;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	export_dcl() {
	    let localctx = new Export_dclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, IDL_GrammarParser.RULE_export_dcl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 259;
	        this.annotation();
	        this.state = 269;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,8,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 260;
	            this.type_dcl();
	            this.state = 261;
	            this.match(IDL_GrammarParser.SEMICOLON);
	            break;

	        case 2:
	            this.state = 263;
	            this.const_dcl();
	            this.state = 264;
	            this.match(IDL_GrammarParser.SEMICOLON);
	            break;

	        case 3:
	            this.state = 266;
	            this.op_dcl();
	            this.state = 267;
	            this.match(IDL_GrammarParser.SEMICOLON);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	interface_name() {
	    let localctx = new Interface_nameContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, IDL_GrammarParser.RULE_interface_name);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 271;
	        this.scoped_name(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}

